--- a/bigahh_html.html
+++ b/bigahh_html.html
@@ -1,49 +1,63 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>╬╖╙╡╠╫╢╔╞╪╥╕╨╡╖╙╔╧╢╥</title>
+        <title></title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
             body {
                 font-family: "Space Mono", monospace;
                 text-align: center;
                 margin: 0;
+                user-select: none;
             }
             .colorss {
                 display: inline-block;
                 width:40vw;
                 height: 100vh;
-                padding:calc(5vw-7px);
+                padding:4vw;
                 overflow: hidden;
                 border: solid black 2px;
                 border-radius: 20px;
                 box-shadow: 0 0 10px 5px rgba(0,0,0,0.3);
+            }
+            .swapbtn {
+                font-size: 100px;
+            }
+            .rankkx {
+                width: 100vw;
+                height: 2vh;
             }
         </style>
         <script>
             curmode="choice"
             colorone=""
             colortwo=""
-            function gochoice() {
-                document.getElementById("choice-page").style.display = "block"
-                document.getElementById("rank-page").style.display = "none"
-                curmode="choice"
-            }
-            function gorank() {
-                document.getElementById("choice-page").style.display = "none"
-                document.getElementById("rank-page").style.display = "block"
-                curmode="rank"
+            let last = 0
+            function swap() {
+                if (curmode == "rank") {
+                    document.getElementById("choice-page").style.display = "block"
+                    document.getElementById("rank-page").style.display = "none"
+                    curmode="choice"
+                } else {
+                    document.getElementById("choice-page").style.display = "none"
+                    document.getElementById("rank-page").style.display = "block"
+                    curmode="rank"
+                }
             }
             async function choose(the) {
+                const now = Date.now()
+                if (now - last < 500) return
+                last = now
                 const controller = new AbortController()
                 const timeout = setTimeout(() => controller.abort(), 5000) // 5s
                 try {
                     const result = await fetch('/api/say-result', {
                         method: 'POST',
                         headers: { 'content-type': 'text/plain' },
-                        body: the,
+                        body: colorone+" "+colortwo+" "+the,
                         signal: controller.signal,
                         credentials: 'include' // send cookies if needed
                     })
@@ -60,7 +74,6 @@
                 const res = await fetch('/api/get-colors-to-grade')
                 if (!res.ok) throw new Error(res.status + ' ' + res.statusText)
                 const data = await res.text()
-                console.log(data)
 
                 ent = data.split(" ")
 
@@ -70,20 +83,31 @@
                 document.getElementById("coll-one").style.backgroundColor = "#"+colorone
                 document.getElementById("coll-two").style.backgroundColor = "#"+colortwo
             }
-            
+            async function getleaderboard() {
+                const res = await fetch('/api/send-leaderboard')
+                if (!res.ok) throw new Error(res.status + ' ' + res.statusText)
+                const data = await res.text()
+                for (let i = 0; i< 64;++i) {
+                    document.getElementById("colornew-"+i).style.backgroundColor = "#"+data.slice(3*i,3*i+3)
+                }
+            }
         </script>
     </head>
     <body>
-        <button onclick="gochoice()">Choice</button>
-        <button onclick="gorank()">rank</button>
+        <span onclick="swap()" class="swapbtn"><i class="fa fa-exchange"></i></span>
         <div id="choice-page" onload="getcolors()">
-            <h1>choose your favorite color between the two following</h1>
             <span class="colorss" id="coll-one" onclick="choose(1)"></span>
             <span class="colorss" id="coll-two" onclick="choose(2)"></span>
             <script>getcolors()</script>
         </div>
         <div id="rank-page" style="display: none">
-            <h1>these are the rankings chat</h1>
+            <script>
+                for (let i = 0; i< 64;++i) {
+                    document.getElementById("rank-page").insertAdjacentHTML('beforeend', '<div class="rankkx" id="colornew-'+i+'"></div>')
+                }
+                getleaderboard()
+                setInterval(getleaderboard, 1000)
+            </script>
         </div>
     </body>
 </html>
