--- a/front/index.html
+++ b/front/index.html
@@ -45,11 +45,13 @@
                     document.getElementById("rank-page").style.display = "none"
                     curmode="choice"
                     document.getElementById("icon").src = "podium.png"
+                    document.getElementById("icon").alt = "Podium icon to switch to leaderboard"
                 } else {
                     document.getElementById("choice-page").style.display = "none"
                     document.getElementById("rank-page").style.display = "block"
                     curmode="rank"
                     document.getElementById("icon").src = "voting.png"
+                    document.getElementById("icon").alt = "Voting icon to switch to ranker"
                 }
             }
             async function choose(the) {
